---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1090                                 -
---------------------------------------------
- 2021-03-03                                -
---------------------------------------------
.: WSM: Task: Export monthly sales transaction (WSM-273)

---------------------------------------------
- 2021-03-03                                -
---------------------------------------------
.: WSM: Task: A better UI for modifying item (WSM-308)

---------------------------------------------
- 2021-02-28                                -
---------------------------------------------
.: WSM: Task: Refresh pages interval (WSM-41)

- v1.0.1081                                 -
---------------------------------------------
- 2021-03-04                                -
---------------------------------------------
.: WSM: BugFix: Delivery is being updated and delivery fee is being removed (WSM-309)
.: WSM: Task: Update the location UI to not misleading user (WSM-310)

- v1.0.1080                                 -
---------------------------------------------
- 2021-02-27                                -
---------------------------------------------
.: WSM: Task: Update "Ready" status in flowchart (WSM-306)
.: WSM: Task: Padding in mobile size (WSM-302)
.: WSM: Task: Add selection in home to upgrade to Premium (WSM-186)

---------------------------------------------
- 2021-02-26                                -
---------------------------------------------
.: WSM: Task: Better adding invoice UI (WSM-302)

---------------------------------------------
- 2021-02-24                                -
---------------------------------------------
.: WSM: Task: Adding invoice tracking dot (WSM-305)
.: WSM: Task: Add ready status in invoice track (WSM-306)
.: WSM: Task: Update Invoice UI in mobile (WSM-307)

---------------------------------------------