@@ -4,6 +4,11 @@
 
 - v1.0.1090                                 -
 ---------------------------------------------
+- 2021-03-11                                -
+---------------------------------------------
+.: WSM: Task: Save promotion to invoice as ObjectId (WSM-311)
+
+---------------------------------------------
 - 2021-03-03                                -
 ---------------------------------------------
 .: WSM: Task: Export monthly sales transaction (WSM-273)
